# sfml-game-engine

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
assets/: README.md
src/: main.cpp  utils.h
src/core/: Action.cpp  Action.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  State.cpp  State.h
src/core/animations/: Animation.cpp  Animation.h  CircleShapeAnimation.cpp  CircleShapeAnimation.h
src/core/components/: CAnimation.h  CTransform.h
src/core/entities/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/states/: GameState.cpp  GameState.h
